@@ -112,7 +112,7 @@
 
   \multicolumn{2}{l}{\textbf{Modify context}} \\[0.5ex]
   $simp$ & declare Simplifier rules \\
-  $intro$, $elim$, $dest$ & declare Classical Reasoner rules (also ``$!$'' or ``$!!$'') \\
+  $intro$, $elim$, $dest$ & declare Classical Reasoner rules (also ``?'' or ``??'') \\
   $iff$ & declare Simplifier + Classical Reasoner rules \\
   $trans$ & declare calculational rules (general transitivity) \\
 \end{tabular}
